--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "workshop-fetch-useeffect",
+  "name": "workshop-useeffect",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
